@@ -8,7 +8,7 @@ export DH_COMPAT=4
 
 PACKAGE=$(shell dh_listpackages)
 VERSION=$(shell dpkg-parsechangelog | grep ^Version: | cut -d ' ' -f 2)
-ARCH=$(shell dpkg --print-architecture)
+ARCH=all
 FILENAME=$(PACKAGE)_$(VERSION)_$(ARCH).udeb
 PRIORITY=$(shell grep ^Priority: debian/control | cut -d ' ' -f 2)
 
@@ -39,6 +39,8 @@ install: build
 	rm -rf `find debian/$(PACKAGE) -name CVS`
 
 binary-arch: build install
+
+binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installdebconf
@@ -47,8 +49,6 @@ binary-arch: build install
 	dh_gencontrol -- -fdebian/files~
 	dpkg-distaddfile $(FILENAME) debian-installer $(PRIORITY)
 	dh_builddeb --filename=$(FILENAME)
-
-binary-indep: build install
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
