@@ -9,7 +9,9 @@ partman-ext3 (11) UNRELEASED; urgency=low
   * Joey Hess
     - Call ext3 ext3, not "extended 3".
     - Make ext3 the default for new filesystems.
-
+  * Anton Zinoviev
+    - Make the package architecture independent.
+  
  -- Joey Hess <joeyh@debian.org>  Tue,  2 Mar 2004 14:59:01 -0500
 
 partman-ext3 (10) unstable; urgency=low
